# mirall

./: CMakeLists.txt  VERSION.cmake  config.h.in
src/: CMakeLists.txt  main.cpp
src/integration/: CMakeLists.txt  README.md
src/integration/nautilus/: CMakeLists.txt  context-menu.c  context-menu.h  overlay.c  overlay.h  plugin.c  plugin.h
src/mirall/: application.cpp  folderwatcher.cpp  generalsettings.cpp  generalsettings.h  generalsettings.ui  genericupdater.cpp  genericupdater.h  mirallconfigfile.cpp  mirallconfigfile.h  networkjobs.cpp  sparkleupdater.h  updatedetector.cpp  updater.cpp  updater.h  utility.cpp  version.h.in
